[005] Create SpringBoot + Hibernate Backbone.
Created backbone of data layer.
Added h2 database server.

--- a/pom.xml
+++ b/pom.xml
@@ -3,25 +3,31 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>COMP231</groupId>
-    <artifactId>COMP231</artifactId>
-    <packaging>pom</packaging>
-    <version>0.1.0</version>
-    <modules>
-        <module>beans</module>
-    </modules>
-
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
         <version>1.5.9.RELEASE</version>
     </parent>
 
+    <groupId>COMP231</groupId>
+    <artifactId>COMP231</artifactId>
+    <packaging>pom</packaging>
+    <version>0.1.0</version>
+
+    <modules>
+        <module>core</module>
+        <module>data-access</module>
+        <module>mvc</module>
+    </modules>
+
     <dependencies>
+
         <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-web</artifactId>
+            <groupId>log4j</groupId>
+            <artifactId>log4j</artifactId>
+            <version>1.2.17</version>
         </dependency>
+
     </dependencies>
 
     <properties>
@@ -29,13 +35,5 @@
     </properties>
 
 
-    <build>
-        <plugins>
-            <plugin>
-                <groupId>org.springframework.boot</groupId>
-                <artifactId>spring-boot-maven-plugin</artifactId>
-            </plugin>
-        </plugins>
-    </build>
 
 </project>
