[009] Create Testing Backbone for Data Layer.

--- a/data-access/src/main/resources/test.properties
+++ b/data-access/src/main/resources/test.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:h2:file:~/metropolitan;AUTO_SERVER=true;
+spring.datasource.url=jdbc:h2:file:~/metropolitan_test;AUTO_SERVER=true;
 spring.datasource.username=sa
 spring.datasource.driver-class-name=org.h2.Driver
 spring.datasource.platform=h2
@@ -10,7 +10,7 @@ spring.h2.console.path=/console
 
 spring.jpa.show-sql=true
 spring.jpa.hibernate.dialect=org.hibernate.dialect.H2Dialect
-spring.jpa.hibernate.ddl-auto=validate
+spring.jpa.hibernate.ddl-auto=create-drop
 
 spring.jpa.properties.hibernate.generate_statistics=true
 logging.level.org.hibernate.stat=debug
